--- a/css/index.css
+++ b/css/index.css
@@ -10,9 +10,9 @@ header .menu {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background-color: rgba(153, 152, 152, 0.053);
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
   font-weight: 700;
