--- a/css/index.scss
+++ b/css/index.scss
@@ -15,7 +15,7 @@ header{
     height: 60px;
     display: flex;
     width: 100%;
-    justify-content: flex-start;
+    justify-content: space-between; 
     background-color: rgba(153, 152, 152, 0.053); 
     font-family: $font1;
     font-weight: 700;
