--- a/css/servicios.css
+++ b/css/servicios.css
@@ -22,6 +22,11 @@
   background-color: white;
   border: 1px solid pink;
 }
+@media (max-width: 800px) {
+  .servicio4 div {
+    height: 150px;
+  }
+}
 .servicio4 div:nth-child(1) {
   text-transform: uppercase;
   background-color: pink;
@@ -117,4 +122,8 @@ body > section:nth-child(7) > div {
 .servicios-3 .contable {
   background-color: #C3DFAA;
   border-radius: 25px;
+}
+
+#languaje a {
+  color: white;
 }
