--- a/css/servicios.scss
+++ b/css/servicios.scss
@@ -16,6 +16,9 @@
     text-align: center;
     background-color: white;
     border: 1px solid pink;
+    @media (max-width:800px) {
+      height: 150px;
+    }
     &:nth-child(1){
       text-transform: uppercase;
       background-color: pink;
@@ -113,4 +116,7 @@ body > section:nth-child(7) > div{
     background-color:#C3DFAA;
     border-radius: 25px;
   }
+}
+#languaje a{
+  color: white;
 }
